--- a/plate/rectangle_cull_depthTest/index.html
+++ b/plate/rectangle_cull_depthTest/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>17.再帰処理と移動・回転・拡大縮小</title>
-        <script src="../minMatrix.js" type="text/javascript"></script>
+        <title>19.カリングと深度テスト</title>
+        <script src="../../minMatrix.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
         <script id="vs" type="x-shader/x-vertex">
             attribute vec3 position;
@@ -25,5 +25,11 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
+        <p>
+			<input id="cull" type="checkbox" />enable culling
+		</p>
+		<p>
+			<input id="depth" type="checkbox">enable depth test
+		</p>
     </body>
 </html>
