--- a/plate/triangle_double/index.html
+++ b/plate/triangle_double/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>18.インデックスバッファによる描画</title>
-        <script src="../minMatrix.js" type="text/javascript"></script>
+        <title>16.複数モデルのレンダリング</title>
+        <script src="../../minMatrix.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
         <script id="vs" type="x-shader/x-vertex">
             attribute vec3 position;
@@ -25,11 +25,5 @@
     </head>
     <body>
         <canvas id="canvas"></canvas>
-        <p>
-			<input id="cull" type="checkbox" />enable culling
-		</p>
-		<p>
-			<input id="depth" type="checkbox">enable depth test
-		</p>
     </body>
 </html>
