--- a/plate/triangle_radian/index.html
+++ b/plate/triangle_radian/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>15.ポリゴンに色を塗る</title>
-        <script src="../minMatrix.js" type="text/javascript"></script>
+        <title>17.再帰処理と移動・回転・拡大縮小</title>
+        <script src="../../minMatrix.js" type="text/javascript"></script>
         <script src="script.js" type="text/javascript"></script>
         <script id="vs" type="x-shader/x-vertex">
             attribute vec3 position;
@@ -16,7 +16,6 @@
         </script>
         <script id="fs" type="x-shader/x-fragment">
             precision mediump float;
-
             varying vec4 vColor;
 
             void main(void){
